@@ -140,7 +140,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.2</version>
         <configuration>
-          <argLine>@{argLine} -Dfile.encoding=UTF-8 --illegal-access=permit</argLine>
+          <argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
           <runOrder>random</runOrder>
         </configuration>
       </plugin>
@@ -176,7 +176,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.3.0</version>
         <executions>
           <execution>
             <id>copy-dependencies</id>
